feat(Core): `start` & `end` field in `image` & `text` element